--- a/src/components/Content/styles.css
+++ b/src/components/Content/styles.css
@@ -3,12 +3,11 @@
   width: 100%;
   overflow-y: auto;
   box-sizing: border-box;
-  transition: all .4s ease;
+  transition: position 1s ease;
   position: fixed;
   margin-left: 0;
 }
 
 .app__content--open {
-  margin-left: 240px;
-  width: calc(100% - 240px);
+  position: relative;
 }
